--- a/Locadora/Locadora/LocadoraHome.xaml
+++ b/Locadora/Locadora/LocadoraHome.xaml
@@ -5,10 +5,10 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Locadora"
       mc:Ignorable="d" 
-      d:DesignHeight="300" d:DesignWidth="300"
+      d:DesignHeight="1200" d:DesignWidth="800"
       Title="Locadora - Home">
 
-    <Grid Margin="10,0,10,0">
+    <Grid Margin="10,0,10,0" Background="#f6f6f6">
         
         <Grid.Resources>
             <!-- Name item template -->
@@ -41,9 +41,7 @@
                 </x:XData>
             </XmlDataProvider>
         </Grid.Resources>
-        <Grid.Background>
-            <ImageBrush ImageSource="image.jpg"  />
-        </Grid.Background>
+       
 
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="230" />
@@ -59,9 +57,7 @@
 
         <!-- People list -->
 
-        <Label Grid.Column="1" Style="{StaticResource headerTextStyle}" >
-            View Expense Report
-        </Label>
+        <Label Grid.Column="1" Style="{StaticResource headerTextStyle}" Content="Locadora" />
 
         <Border Grid.Column="1" Grid.Row="1" Style="{StaticResource listHeaderStyle}">
             <Label Style="{StaticResource listHeaderTextStyle}">Names</Label>
@@ -72,6 +68,6 @@
         </ListBox>
 
         <!-- View report button -->
-        <Button Grid.Column="1" Grid.Row="3" Click="selecionarFilme" Style="{StaticResource buttonStyle}">View</Button>
+        <Button Grid.Column="1" Grid.Row="3" Click="selecionarFilme" Style="{StaticResource buttonStyle}" Margin="0,6,0,4">View</Button>
     </Grid>
 </Page>
